adjustments to navbar to fix alignments

--- a/personal-site/src/App.css
+++ b/personal-site/src/App.css
@@ -38,10 +38,18 @@
 }
 
 
+#basic-navbar-nav{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 0;
+}
+
 .navside {
+  display: flex;
   background-color: #1d1f21;
   height: 100%;
-  width: 12%;
+  width: 14%;
   padding-left: 1%;
   position: fixed;
   z-index: 1;
@@ -64,10 +72,6 @@
   font-variant: small-caps;
 }
 
-.navItems {
-  display: flex;
-  flex-direction: column;
-}
 
 .main {
   display: flex;
